# O.R.I.O.N-LLM-Research-Platform

./: .env  .env.example  .gitignore  ACCESS_GUIDE.md  ANALYSIS_SUMMARY.txt  BACKEND_QUICKSTART.md  CHANGELOG.md  CI-CD_FIX_COMPLETE.md  CI-CD_FIX_FINAL.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_GAP_ANALYSIS.md  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  Makefile  QUICK_START.md  README.md  ROADMAP_PROMPTS.md  SESSIONS_10-12_IMPLEMENTATION.md  SESSIONS_14-17_IMPLEMENTATION.md  SESSIONS_18-20_IMPLEMENTATION.md  SESSIONS_21-28_FIX_PLAN.md  SESSIONS_7-9_IMPLEMENTATION.md  SESSION_5_IMPLEMENTATION.md  SESSION_6_IMPLEMENTATION.md  alembic.ini  docker-compose.yml  index.html  orion_advanced_features.py  orion_core_modules.py  orion_integration_deployment.py  orion_testing_optimization (1).py  orion_usage_examples.py  push-to-github.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_demo.py  simple_api.py
.github/workflows/: ci-cd.yml  security.yml  tests.yml
alembic/: README  env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_add_predicted_properties.py  003_add_provenance_tracking.py  004_add_multi_tenancy.py  005_add_multiscale_models.py  006_add_design_campaigns.py  007_add_structure_features.py  008_add_composite_indexes.py  008_add_orchestrator.py  009_rename_metadata_and_add_structure_hash.py  010_add_structure_spacegroup_columns.py  011_add_bulk_import_jobs.py  012_add_simulation_job_kind.py  013_add_workflow_runs.py  014_add_reference_energies.py
backend/common/: __init__.py  structure_parsers.py  units.py
backend/common/agent_v2/: __init__.py  agent.py  tools.py
backend/common/batteries/: utils.py
backend/common/calibration/: __init__.py  cross_validate.py  formation.py  references.py  (+2 more)
backend/orchestrator/: __init__.py  core.py
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker
docs/: SECURITY.md  api-overview.md  architecture.md  design-loops.md  engines.md
docs/guides/: MACOS_SETUP.md  MIGRATION_GUIDE.md  ML_PREDICTION_GUIDE.md  ORCHESTRATOR_DEPLOYMENT_GUIDE.md  QUICKSTART_ENGINES.md  README.md
docs/history/: ADVANCED_FEATURES.md  FRONTEND_STATUS.md  GITHUB_PUSH_INSTRUCTIONS.md  README.md  SESSIONS_10-12_INTEGRATION_COMPLETE.md  SESSIONS_13-30_INTEGRATION_COMPLETE.md  SESSIONS_21-28_IMPLEMENTATION.md  SESSION_30_IMPLEMENTATION.md  SESSION_5_SUMMARY.txt  SESSION_6_SUMMARY.md  SUMMARY.md  phase_0_review.md  phase_0_session_1_report.md  phase_0_session_2_report.md  phase_0_session_3_report.md  phase_0_session_4_report.md  phase_0_session_5_report.md  phase_1_review.md  phase_1_session_1.1_report.md  phase_1_session_1.2_report.md  phase_1_session_1.3_report.md  phase_1_session_1.4_report.md  phase_1_session_1.5_report.md  phase_2_session_2.1_report.md  phase_2_session_2.2_report.md  phase_2_session_2.3_report.md  phase_2_session_2.4_report.md  phase_3_session_3.1_report.md  phase_3_session_3.2_report.md  phase_3_session_3.3_report.md  phase_3_session_3.4_report.md  phase_3_session_3.4b_report.md  phase_4_session_4.2_report.md  phase_4_session_4.3_report.md  phase_4_session_4.3b_report.md  phase_5_session_5.1_report.md  phase_5_session_5.2_report.md  phase_5_session_5.3_report.md  phase_6_session_6.1_report.md  phase_6_session_6.2_report.md  (+2 more)
examples/: quick_start.py
examples/marketing/: index.html  landing_page_demo.py  streamlit_demo.py
frontend/: .env.example  SESSION_7_IMPLEMENTATION.md  STRUCTURE_VIEWER_ARCHITECTURE.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/e2e/: auth.spec.ts  campaigns_ml.spec.ts  jobs.spec.ts  structures.spec.ts
frontend/scripts/: gen-api-types.sh
frontend/src/: middleware.ts
k8s/base/: api-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml
orion-platform/: .env.example  CLEANUP_BRANCHES.md  PUSH_TO_GITHUB.md  demo_app.py  requirements.txt  setup.py
orion-platform/config/: config.yaml
orion-platform/src/: __init__.py
scripts/: _merge_calibration_json.py  demo_run.py  init_postgres.sql  orion_calibrate.py  orion_dataset.py  orion_fetch_mp_oxides.py  orion_fetch_potentials.sh  orion_oxides_gap_v1.sh  orion_scf_compound.py  orion_train_baseline.py  orion_train_cgcnn.py  seed_data.py  seed_mp_subset.py  seed_workflows.py  test_engines_smoke.py
sdk/python/: README.md  setup.py
src/: __init__.py
src/api/: __init__.py  app.py  app_dev.py  cache.py  config.py  database.py  database_optimizations.py  exceptions.py  middleware.py  validation.py
src/candidate_generation/: candidate_generator.py  surrogate_trainer.py
src/core/: exceptions.py  orion_system.py  physics_validator.py
src/evaluation/: __init__.py
src/knowledge_graph/: __init__.py  conflict_resolution.py  queries.py  schema.py
src/rag/: rag_system.py
src/ui/: dashboard.py
src/worker/: FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION.md  __init__.py  celery_app.py  example_integration.py  simulation_runner.py  start_worker.sh  tasks.py  test_worker.py
tests/: conftest.py  test_active_learning_v2.py  test_agent_loop_router.py  test_agent_orchestrator_bridge.py  test_agent_v2.py  test_al_router_registration.py  test_auth_cookie_mode.py  test_auth_enhancements.py  test_bo_pareto_endpoint.py  test_bo_router_registration.py  test_bo_v2.py  test_bulk_property_import.py  test_caching.py  test_calibration.py  test_campaigns_v2.py  test_celery_spine.py  test_cgcnn_v2.py  test_continuum_fem.py  test_continuum_integration.py  test_database_optimizations.py  test_datasets_v2.py  test_defects.py  test_elastic.py  test_execution_backends.py  test_integration_jobs.py  test_job_state_machine.py  test_lammps_input_gen.py  test_lammps_integration.py  test_lammps_run.py  test_md_analyzers.py  test_md_live_acceptance.py  test_md_workflow_templates.py  test_mesoscale_kmc.py  test_ml_baselines.py  test_ml_features_v2.py  test_ml_training.py  test_mock_static.py  test_mp_offline_fixtures.py  test_multiscale_template.py  test_phonons.py  (+14 more)
tests/_legacy/: README.md  test_api.py.pre_refactor
(+295 files in other folders)
