[tool.poetry]
name = "orion-platform"
version = "1.0.0"
description = "ORION: Optimized Research & Innovation for Organized Nanomaterials - AI-driven materials science platform"
authors = ["ORION Development Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1.0"
torch-geometric = "^2.4.0"
transformers = "^4.36.0"
sentence-transformers = "^2.2.2"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
openai = "^1.6.0"
anthropic = "^0.8.0"
neo4j = "^5.15.0"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
streamlit = "^1.29.0"
gradio = "^4.10.0"
numpy = "^1.24.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
plotly = "^5.18.0"
networkx = "^3.2.1"
pymatgen = "^2023.12.18"
ase = "^3.22.1"
rdkit = "^2023.9.3"
chembl-webresource-client = "^0.10.8"
pubchempy = "^1.0.4"
biopython = "^1.82"
faiss-cpu = "^1.7.4"
elasticsearch = "^8.11.0"
minio = "^7.2.0"
celery = "^5.3.4"
flower = "^2.0.1"
prometheus-client = "^0.19.0"
grafana-api = "^1.0.3"
cryptography = "^41.0.7"
pyjwt = "^2.8.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
alembic = "^1.13.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
jupyterlab = "^4.0.9"
ipywidgets = "^8.1.1"
tqdm = "^4.66.1"
click = "^8.1.7"
rich = "^13.7.0"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
asyncpg = "^0.29.0"
motor = "^3.3.2"
beanie = "^1.23.6"
pymongo = "^4.6.1"
rdflib = "^7.0.0"
owlready2 = "^0.45"
spacy = "^3.7.2"
nltk = "^3.8.1"
gensim = "^4.3.2"
huggingface-hub = "^0.19.4"
datasets = "^2.15.0"
evaluate = "^0.4.1"
accelerate = "^0.25.0"
wandb = "^0.16.1"
mlflow = "^2.9.2"
optuna = "^3.5.0"
ray = "^2.9.0"
dask = "^2023.12.1"
joblib = "^1.3.2"
numba = "^0.58.1"
cython = "^3.0.7"
psutil = "^5.9.6"
gputil = "^1.4.0"
docker = "^7.0.0"
kubernetes = "^28.1.0"
boto3 = "^1.34.11"
google-cloud-storage = "^2.13.0"
azure-storage-blob = "^12.19.0"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
toml = "^0.10.2"
marshmallow = "^3.20.1"
arrow = "^1.3.0"
pendulum = "^3.0.0"
schedule = "^1.2.0"
apscheduler = "^3.10.4"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
notebook = "^7.0.6"
ipython = "^8.18.1"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=src --cov-report=html --cov-report=term"