[tool.poetry]
name = "orion-platform"
version = "1.0.0"
description = "ORION: Optimized Research & Innovation for Organized Nanomaterials - AI-driven materials science platform"
authors = ["ORION Development Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
# ---------------------------------------------------------------------------
# Dependency list was heavily slimmed in Session 0.2 of the roadmap:
#   - Removed: neo4j, rdflib, owlready2, gradio, streamlit (backend-side only;
#     frontend is Next.js), pymongo/motor/beanie (MongoDB unused),
#     spacy/nltk/gensim (legacy RAG), faiss-cpu, sentence-transformers,
#     chembl-webresource-client, pubchempy, biopython (legacy data ingest),
#     langchain-community (was RAG-only).
#   - LangChain stack kept for Phase 7 agent work.
#   - Cloud SDK trio (boto3 / google-cloud-storage / azure-storage-blob) kept
#     for future object-storage adapters; MinIO covers local.
# ---------------------------------------------------------------------------
python = "^3.10"

# API & async stack
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
pyjwt = "^2.8.0"
cryptography = "^41.0.7"
passlib = "^1.7.4"
bcrypt = "^4.1.2"
httpx = "^0.25.2"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
slowapi = "^0.1.9"
prometheus-fastapi-instrumentator = "^6.1.0"

# Database / storage
sqlalchemy = "^2.0.23"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
alembic = "^1.13.1"
elasticsearch = "^8.11.0"
minio = "^7.2.0"

# Workers
celery = "^5.3.4"
flower = "^2.0.1"

# Observability
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.22.0"
opentelemetry-sdk = "^1.22.0"
opentelemetry-exporter-jaeger = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.43b0"
loguru = "^0.7.2"

# ML / AI
torch = "^2.1.0"
torch-geometric = "^2.4.0"
transformers = "^4.36.0"
scikit-learn = "^1.3.2"
huggingface-hub = "^0.19.4"
datasets = "^2.15.0"
accelerate = "^0.25.0"
mlflow = "^2.9.2"
optuna = "^3.5.0"

# LLM providers (Phase 7 agent)
openai = "^1.6.0"
anthropic = "^0.25.0"
langchain = "^0.1.0"

# Scientific / numerics
numpy = "^1.24.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
networkx = "^3.2.1"
joblib = "^1.3.2"

# Materials science
pymatgen = "^2023.12.18"
ase = "^3.22.1"
rdkit = "^2023.9.3"

# Utilities
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
python-dotenv = "^1.0.0"
tqdm = "^4.66.1"
click = "^8.1.7"
rich = "^13.7.0"
psutil = "^5.9.6"

# Deployment targets (kept thin for now; expand in Phase 13)
docker = "^7.0.0"
kubernetes = "^28.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
flake8 = "^6.1.0"
mypy = "^1.7.1"
isort = "^5.13.2"
pre-commit = "^3.6.0"
ipython = "^8.18.1"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# pytest is configured in pytest.ini (Session 0.5); do not duplicate here.